OAS API Generator 적용하여 SummaryController 수정
