# src/main/java/com/system/batch/killbatchsystem/summary/infrastructure/jpa/AISummaryQueryRepository.java
@@ -1,7 +1,8 @@
 package com.system.batch.killbatchsystem.summary.infrastructure.jpa;
 
-import com.system.batch.killbatchsystem.article.batch.common.ArticleSource;
-import com.system.batch.killbatchsystem.summary.domain.TopKeyword;
+import com.system.batch.killbatchsystem.model.ArticleSource;
+import com.system.batch.killbatchsystem.model.SortBy;
+import com.system.batch.killbatchsystem.model.TopKeyword;
 import java.util.List;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
