# src/main/java/com/system/batch/killbatchsystem/summary/infrastructure/jpa/AISummaryQueryRepositoryImpl.java
@@ -10,11 +10,12 @@ import com.querydsl.core.types.dsl.StringPath;
 import com.querydsl.jpa.JPAExpressions;
 import com.querydsl.jpa.impl.JPAQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
-import com.system.batch.killbatchsystem.article.batch.common.ArticleSource;
 import com.system.batch.killbatchsystem.comment.infrastructure.jpa.QCommentEntity;
+import com.system.batch.killbatchsystem.model.ArticleSource;
+import com.system.batch.killbatchsystem.model.SortBy;
+import com.system.batch.killbatchsystem.model.TopKeyword;
 import com.system.batch.killbatchsystem.reaction.domain.ReactionType;
 import com.system.batch.killbatchsystem.reaction.infrastructure.jpa.QReactionEntity;
-import com.system.batch.killbatchsystem.summary.domain.TopKeyword;
 import static com.system.batch.killbatchsystem.summary.infrastructure.jpa.QAISummaryEntity.aISummaryEntity;
 import java.util.Collections;
 import java.util.LinkedHashMap;
