# src/main/java/com/system/batch/killbatchsystem/summary/infrastructure/jpa/SortBy.java
@@ -1,6 +1,0 @@
-package com.system.batch.killbatchsystem.summary.infrastructure.jpa;
-
-public enum SortBy {
-  LATEST,
-  POPULAR
-}
